# rust-code-scaner

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/cli/: mod.rs
src/database/: mod.rs  models.rs
src/indexer/: code_parser.rs  mod.rs
