[package]
name = "rust-code-scaner"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
clap = { version = "4.6.1", features = ["derive"] }
walkdir = "2.5.0"
tokio = { version = "1.52.1", features = ["full"] }
tokio-postgres = "0.7.17"
deadpool-postgres = { version = "0.14.1", features = ["serde"] }
tree-sitter = "0.26.8"
tree-sitter-python = "0.25.0"
thiserror = "2.0.18"
dotenv = "0.15.0"
config = "0.15.22"
serde = { version = "1.0.228", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
sha2 = "0.11.0"
hex = "0.4.3"
